[gd_scene load_steps=20 format=3 uid="uid://cxto6ttjrbwaj"]

[ext_resource type="Script" uid="uid://c8eomangvu0fy" path="res://scripts/Character.gd" id="1_36qky"]
[ext_resource type="PackedScene" uid="uid://bsp7r87lhoge0" path="res://assets/adventurer/characters/gltf/Barbarian.glb" id="1_x86cy"]
[ext_resource type="Script" uid="uid://dto3kqnkfl38b" path="res://scripts/PlayerAttackComponent.gd" id="3_rrijo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_36qky"]

[sub_resource type="BoxShape3D" id="BoxShape3D_36qky"]
size = Vector3(0.695801, 0.77832, 0.317383)

[sub_resource type="BoxShape3D" id="BoxShape3D_rrijo"]
size = Vector3(1, 1.19183, 1.06134)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p1yxr"]
animation = &"Jump_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qkbam"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_36qky"]
animation = &"Running_B"
use_custom_timeline = true
timeline_length = 1.0
stretch_time_scale = true
start_offset = 0.0
loop_mode = 1

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_36qky"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cqqet"]
animation = &"Dualwield_Melee_Attack_Slice"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s0imr"]
animation = &"1H_Melee_Attack_Slice_Diagonal"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_klqsq"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_xmfsq"]
graph_offset = Vector2(-466.181, -359.958)
nodes/Animation/node = SubResource("AnimationNodeAnimation_s0imr")
nodes/Animation/position = Vector2(180, -360)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_cqqet")
"nodes/Animation 2/position" = Vector2(180, 20)
nodes/IsSpecialAttack/node = SubResource("AnimationNodeBlend2_klqsq")
nodes/IsSpecialAttack/position = Vector2(660, -240)
nodes/output/position = Vector2(980, -160)
node_connections = [&"IsSpecialAttack", 0, &"Animation", &"IsSpecialAttack", 1, &"Animation 2", &"output", 0, &"IsSpecialAttack"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_klqsq"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_cqqet"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_p1yxr"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rrijo"]
animation = &"Idle"
use_custom_timeline = true
timeline_length = 1.0
stretch_time_scale = true
start_offset = 0.0
loop_mode = 1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_cqqet"]
graph_offset = Vector2(172.428, 19.5763)
nodes/Animation/node = SubResource("AnimationNodeAnimation_36qky")
nodes/Animation/position = Vector2(-80, 380)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_p1yxr")
"nodes/Animation 2/position" = Vector2(-80, 620)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_qkbam")
"nodes/Animation 3/position" = Vector2(680, 420)
nodes/Attack/node = SubResource("AnimationNodeAdd2_36qky")
nodes/Attack/position = Vector2(1440, 380)
nodes/AttackBlendTree/node = SubResource("AnimationNodeBlendTree_xmfsq")
nodes/AttackBlendTree/position = Vector2(680, 780)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_klqsq")
nodes/AttackOneShot/position = Vector2(1160, 440)
nodes/Jump/node = SubResource("AnimationNodeBlend2_cqqet")
nodes/Jump/position = Vector2(800, 100)
nodes/Run/node = SubResource("AnimationNodeBlend2_p1yxr")
nodes/Run/position = Vector2(380, 140)
nodes/idle/node = SubResource("AnimationNodeAnimation_rrijo")
nodes/idle/position = Vector2(-80, 180)
nodes/output/position = Vector2(1740, 220)
node_connections = [&"AttackOneShot", 0, &"Jump", &"AttackOneShot", 1, &"AttackBlendTree", &"Jump", 0, &"Run", &"Jump", 1, &"Animation 2", &"Run", 0, &"idle", &"Run", 1, &"Animation", &"output", 0, &"AttackOneShot"]

[node name="PlayerRoot" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 7
floor_snap_length = 1.0
script = ExtResource("1_36qky")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38297, 0.153106)
shape = SubResource("CapsuleShape3D_36qky")

[node name="Model" parent="." instance=ExtResource("1_x86cy")]

[node name="Skeleton3D" parent="Model/Rig" index="0"]
bones/1/position = Vector3(4.99394e-18, 0.385381, 1.19065e-24)
bones/1/rotation = Quaternion(0.10274, -1.18578e-07, 1.22475e-08, 0.994708)
bones/2/rotation = Quaternion(-1.97501e-11, -0.0398923, 0.00775428, 0.999174)
bones/3/rotation = Quaternion(-3.72529e-09, 7.45058e-09, -9.31322e-10, 1)
bones/4/position = Vector3(0.212007, 0.13708, 0.015165)
bones/4/rotation = Quaternion(-0.801665, -0.0411757, -0.251543, 0.540706)
bones/5/rotation = Quaternion(-2.95647e-08, -3.48742e-08, -0.720869, 0.693072)
bones/7/rotation = Quaternion(-0.328302, -0.358503, 0.0108062, 0.873829)
bones/8/position = Vector3(8.34822e-10, 0.0961251, -0.0575)
bones/8/rotation = Quaternion(-0.0467645, 0.00825887, -0.655389, 0.753797)
bones/11/position = Vector3(-0.212007, 0.131185, -0.0151648)
bones/11/rotation = Quaternion(-0.806896, 0.0372107, 0.178667, 0.561794)
bones/12/rotation = Quaternion(9.84914e-09, 4.52672e-08, 0.670071, 0.742297)
bones/14/rotation = Quaternion(-0.483326, 0.111381, -0.109582, 0.861383)
bones/15/position = Vector3(-8.34815e-10, 0.0961251, -0.0575)
bones/15/rotation = Quaternion(-0.038754, 0.0341686, 0.748478, 0.661144)
bones/19/rotation = Quaternion(-7.33129e-09, 0.0398923, -0.00775428, 0.999174)
bones/22/position = Vector3(0.170945, 0.113587, -0.0836027)
bones/22/rotation = Quaternion(0.995199, -2.09072e-07, -5.92977e-08, 0.09787)
bones/23/rotation = Quaternion(0.691285, 4.98895e-08, -4.80075e-07, 0.722582)
bones/24/rotation = Quaternion(-0.601582, -5.40172e-09, 2.99539e-07, 0.798811)
bones/25/rotation = Quaternion(3.74506e-08, 0.811125, -0.584873, 5.97739e-08)
bones/26/position = Vector3(-0.170945, 0.113587, 0.0836028)
bones/26/rotation = Quaternion(0.818523, 3.14899e-07, -2.20189e-08, 0.574474)
bones/27/rotation = Quaternion(0.696836, -4.95201e-08, 4.8393e-07, 0.71723)
bones/28/rotation = Quaternion(-0.519975, 1.30909e-07, -2.62575e-07, 0.854182)
bones/29/rotation = Quaternion(3.04791e-08, 0.920355, -0.391084, -6.94848e-08)
bones/30/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/31/position = Vector3(0.170945, 0.000348449, -0.170154)
bones/31/rotation = Quaternion(-0.275655, -9.19038e-08, -3.14687e-08, 0.961257)
bones/32/rotation = Quaternion(7.54953e-15, -1.38321e-22, 1, 4.44089e-16)
bones/33/position = Vector3(3.75295e-09, 0.213436, -4.29078e-08)
bones/33/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.95261e-08)
bones/35/rotation = Quaternion(1, -1.33227e-15, 1.94707e-07, 0)
bones/37/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/38/position = Vector3(-0.170945, 0.0636208, 0.459234)
bones/38/rotation = Quaternion(-0.633926, -8.39033e-08, -5.64379e-08, 0.773394)
bones/39/position = Vector3(4.55695e-09, 0.362833, 2.42861e-15)
bones/39/rotation = Quaternion(7.10544e-15, -1.38321e-22, 1, -2.22045e-16)
bones/40/position = Vector3(-1.11482e-08, 0.213436, 2.14539e-08)
bones/40/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.95261e-08)
bones/41/position = Vector3(-6.31127e-09, 0.16565, 5.98178e-10)
bones/42/rotation = Quaternion(1, 4.44087e-16, 1.94707e-07, 1.54616e-29)
bones/44/position = Vector3(0.453508, 0.906761, -0.688859)
bones/44/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/45/position = Vector3(0.513182, 0.941312, 0.0926926)
bones/45/rotation = Quaternion(0.7445, 0.344279, 0.555015, 0.138387)
bones/46/position = Vector3(-0.453507, 0.906761, -0.68886)
bones/46/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/47/position = Vector3(-0.513182, 0.97221, -0.0926923)
bones/47/rotation = Quaternion(-0.7965, 0.138388, 0.585389, 0.0612848)

[node name="1H_Axe_Offhand" parent="Model/Rig/Skeleton3D" index="0"]
transform = Transform3D(-0.28988, 0.116806, 0.949907, 0.818012, 0.54546, 0.182557, -0.496813, 0.829956, -0.253668, 0.561666, 0.857835, 0.229778)

[node name="OffHandCollisionArea" type="Area3D" parent="Model/Rig/Skeleton3D/1H_Axe_Offhand/1H_Axe_Offhand" index="0"]
collision_mask = 7

[node name="OffHandCollisionShape" type="CollisionShape3D" parent="Model/Rig/Skeleton3D/1H_Axe_Offhand/1H_Axe_Offhand/OffHandCollisionArea"]
transform = Transform3D(1, -3.41061e-13, -7.10543e-15, 9.97602e-12, 1, 0, -4.77485e-12, -5.06639e-07, 1, -0.1521, 0.661621, 0.0161126)
shape = SubResource("BoxShape3D_36qky")

[node name="Barbarian_Round_Shield" parent="Model/Rig/Skeleton3D" index="1"]
transform = Transform3D(-0.289881, 0.116807, 0.949907, 0.818014, 0.545458, 0.182558, -0.496811, 0.829958, -0.253668, 0.707839, 0.877404, 0.176709)
visible = false

[node name="Barbarian_Round_Shield" parent="Model/Rig/Skeleton3D/Barbarian_Round_Shield" index="0"]
transform = Transform3D(0.999997, 0.000956449, 0.00230214, -0.000955051, 0.999999, -0.000578105, -0.00230268, 0.000575811, 0.999997, -6.45518e-05, 0.00819978, -0.00567734)

[node name="1H_Axe" parent="Model/Rig/Skeleton3D" index="2"]
transform = Transform3D(0.230654, -0.238188, 0.943432, 0.949684, 0.266242, -0.164965, -0.211888, 0.934013, 0.287613, -0.569374, 0.857495, -0.0331604)

[node name="MainHandCollisionArea" type="Area3D" parent="Model/Rig/Skeleton3D/1H_Axe/1H_Axe" index="0"]
collision_mask = 7

[node name="MainHandCollisionShape" type="CollisionShape3D" parent="Model/Rig/Skeleton3D/1H_Axe/1H_Axe/MainHandCollisionArea"]
transform = Transform3D(1, -5.0665e-07, 5.32907e-15, -1.2815e-06, 0.999998, 1.49012e-08, 1.11759e-06, 4.02331e-07, 1, -5.96046e-07, 0.975677, -0.0412291)
shape = SubResource("BoxShape3D_rrijo")

[node name="2H_Axe" parent="Model/Rig/Skeleton3D" index="3"]
transform = Transform3D(0.230654, -0.238188, 0.943432, 0.949684, 0.266242, -0.164965, -0.211888, 0.934013, 0.287613, -0.569374, 0.857495, -0.0331604)

[node name="Mug" parent="Model/Rig/Skeleton3D" index="4"]
transform = Transform3D(0.230654, -0.238188, 0.943432, 0.949684, 0.266242, -0.164965, -0.211888, 0.934013, 0.287613, -0.627043, 0.559021, -0.0151902)

[node name="Barbarian_Hat" parent="Model/Rig/Skeleton3D" index="5"]
transform = Transform3D(1, 3.71801e-09, 2.98023e-08, 7.45058e-09, 0.978889, -0.204392, -3.72529e-08, 0.204392, 0.978889, -0.00997593, 1.17849, 0.165195)

[node name="Barbarian_Cape" parent="Model/Rig/Skeleton3D" index="6"]
transform = Transform3D(0.996697, -0.0154957, -0.0797187, -0.00112524, 0.978898, -0.204347, 0.081203, 0.203762, 0.975647, -0.00958187, 1.17849, 0.165211)

[node name="AnimationTree" type="AnimationTree" parent="Model"]
tree_root = SubResource("AnimationNodeBlendTree_cqqet")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/add_amount = 1.0
parameters/AttackBlendTree/IsSpecialAttack/blend_amount = 0.0
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0
parameters/Jump/blend_amount = 0
parameters/Run/blend_amount = 1.0

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("3_rrijo")

[connection signal="area_shape_entered" from="Model/Rig/Skeleton3D/1H_Axe_Offhand/1H_Axe_Offhand/OffHandCollisionArea" to="AttackComponent" method="_on_off_hand_collision_area_area_shape_entered"]
[connection signal="body_entered" from="Model/Rig/Skeleton3D/1H_Axe_Offhand/1H_Axe_Offhand/OffHandCollisionArea" to="AttackComponent" method="_on_off_hand_collision_area_body_entered"]
[connection signal="body_exited" from="Model/Rig/Skeleton3D/1H_Axe_Offhand/1H_Axe_Offhand/OffHandCollisionArea" to="AttackComponent" method="_on_off_hand_collision_area_body_exited"]
[connection signal="body_entered" from="Model/Rig/Skeleton3D/1H_Axe/1H_Axe/MainHandCollisionArea" to="AttackComponent" method="_on_main_hand_collision_area_body_entered"]
[connection signal="body_exited" from="Model/Rig/Skeleton3D/1H_Axe/1H_Axe/MainHandCollisionArea" to="AttackComponent" method="_on_main_hand_collision_area_body_exited"]

[editable path="Model"]
